welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:4: error: type mismatch;
 found   : Unit
 required: Int
	for (k <- 0 to num) {
               ^